# astro

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .env.example  .gitignore  54.txt  ARCHITECTURE_v2.md  App.jsx  CLAUDE.md  DESIGN_SYSTEM.md  Dockerfile  Makefile  PlannerPage.jsx  alembic.ini  astrea-storybook.html  astro_channels.csv  astro_channels.json  astro_search.session  auth_router_temp.txt  check_chart.py  ci-jwt-secret.patch.txt  cleanup_git_history.sh  client.js  comit.txt  docker-compose.yml  engine.py  env  error.txt  generate_pdf.py  log.json  main.py  natal_pdf.py  push_notifications.patch  pyproject.toml  pytest.ini  railway.toml  reset_db.py  start.bat  start.sh  stop.bat  (+12 more)
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial.py  002_subscriptions.py  003_users_auth_stripe.py  004_expert_mode.py  005_compat.py  005_fix_schema.py  005_fix_users_not_null.py  006_fix_constraints.py  006_natal_chart_name.py  006_share_token.py  007_add_lite_tier.py  008_add_users_name.py  009_coupons_sent.py  010_natal_chart_name_col.py  011_referral.py  (+28 more)
backend/: advanced_charts_router.py  authz.py  cache.py  celery_app.py  chart_utils.py  config.py  database.py  email_service.py  email_service.py.bak  health.py  limiter.py  main.py  metrics.py  models.py  models.py.bak  natal_pdf.py  onboarding_router.py  redis_client.py  schemas.py  share_router.py  tasks.py
bot/: pilot_bot.py
docs/: email-dns-setup.md
frontend/: App.jsx  LoginPage.jsx  PaymentSuccessPage.jsx  PlannerPage.jsx  ProfilePage.jsx  README.md  RegisterPage.jsx  TransitTimeline.jsx  TransitsPage.jsx  generate-sitemap.js  index.html  package-lock.json  package.json  server.js  tailwind.config.js  vercel.json  vite.config.js
routers/: auth.py  billing.py  calendar.py  chart.py  planner.py  profile.py  transits.py
документация/: 1 часть страйп +конверсия.txt  ARCHITECTURE.md  ARCHITECTURE_v2.md  ASTRO_SPA_ROADMAP_v2.md  DOCUMENTATION.md  TASK_FOR_CLAUDE_CODE.md  WINDOWS_SETUP.md  astro_app_documentation.docx  astro_roadmap.docx  launch_guide.md  main_additions календарь2.py  project_structure.md  structure.md  Транзиты планет и планирование.docx  обновление под календарь + peoject от 08.04.md
(+181 files in other folders)
