[project]
name = "astro-spa"
version = "0.1.0"
description = "Astrological web application — natal chart, transits, AI interpretations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pyswisseph>=2.10.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",
    "timezonefinder>=6.5.0",
    "pytz>=2024.1",
    "geopy>=2.4.1",
    "stripe>=8.0.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.20.0",
    "Pillow>=10.3.0",
    "reportlab>=4.0.0",
    "pywebpush>=1.14.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "fakeredis>=2.20.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["mnt*", "data*", "frontend*", "alembic*", "routers*"]
